# emailAgent-OceanAI

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.py
backend/: backend.py  emailReader.py  emails.json  prompts.json  prompts.py  saved_processed_emails  saved_processed_emails.json
backend/llm_utils/: utils.py
backend/utils/: categorize.py  processor.py
frontend/: app.py
